Moved the converters to their own folder.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/XamlGrid/XamlGrid.csproj
+++ b/XamlGrid/XamlGrid.csproj
@@ -92,13 +92,10 @@
     <Compile Include="Automation\HeaderCellAutomationPeer.cs" />
     <Compile Include="Automation\HeaderRowAutomationPeer.cs" />
     <Compile Include="Automation\RowAutomationPeer.cs" />
-    <Compile Include="Controllers\BooleanToNegativeConverter.cs" />
     <Compile Include="Controllers\DragScrollBehavior.cs" />
     <Compile Include="Controllers\AutoSizeOnDoubleClickBehavior.cs" />
     <Compile Include="Controllers\ColumnsCollection.cs" />
     <Compile Include="Controllers\ControllerCollection.cs" />
-    <Compile Include="Controllers\BooleanToVisibilityConverter.cs" />
-    <Compile Include="Controllers\ByteArrayUriToImageConverter.cs" />
     <Compile Include="Controllers\CellController.cs" />
     <Compile Include="Controllers\Column.cs" />
     <Compile Include="Controllers\ColumnResizingBehavior.cs" />
@@ -106,16 +103,22 @@
     <Compile Include="Controllers\EditorController.cs" />
     <Compile Include="Controllers\FooterCellController.cs" />
     <Compile Include="Controllers\HandleNavigationBehaviour.cs" />
-    <Compile Include="Controllers\IndexToNumberConverter.cs" />
-    <Compile Include="Controllers\IsNullableTypeConverter.cs" />
     <Compile Include="Controllers\NewItemCommand.cs" />
     <Compile Include="Controllers\NewRowController.cs" />
-    <Compile Include="Controllers\NumberToVisibilityConverter.cs" />
     <Compile Include="Controllers\ScrollIntoViewController.cs" />
-    <Compile Include="Controllers\StringToExportOptionsConverter.cs" />
     <Compile Include="Controllers\SumAggregate.cs" />
     <Compile Include="Controllers\SyncScrollBehavior.cs" />
     <Compile Include="Controllers\ScrollOnHomeEndBehaviour.cs" />
+    <Compile Include="Converters\BooleanToNegativeConverter.cs" />
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\ByteArrayUriToImageConverter.cs" />
+    <Compile Include="Converters\IndexToNumberConverter.cs" />
+    <Compile Include="Converters\IsNullableTypeConverter.cs" />
+    <Compile Include="Converters\NumberToVisibilityConverter.cs" />
+    <Compile Include="Converters\SortDirectionToBooleanConverter.cs" />
+    <Compile Include="Converters\StringToColumnWidthConverter.cs" />
+    <Compile Include="Converters\StringToExportOptionsConverter.cs" />
+    <Compile Include="Converters\TypeToAlignmentConverter.cs" />
     <Compile Include="Models\CollectionViewNode.cs" />
     <Compile Include="Models\CustomSizeChangedEventArgs.cs" />
     <Compile Include="Models\DataWrapper.cs" />
@@ -137,13 +140,11 @@
     <Compile Include="Models\SelectedItem.cs" />
     <Compile Include="Controllers\CurrentItemCommand.cs" />
     <Compile Include="Controllers\DataCommand.cs" />
-    <Compile Include="Controllers\TypeToAlignmentConverter.cs" />
     <Compile Include="Controllers\ItemsSourceChangedCommand.cs" />
     <Compile Include="Controllers\HeaderCellController.cs" />
     <Compile Include="Controllers\RowController.cs" />
     <Compile Include="Controllers\ScrollExtensions.cs" />
     <Compile Include="Controllers\SelectionCommand.cs" />
-    <Compile Include="Controllers\SortDirectionToBooleanConverter.cs" />
     <Compile Include="Controllers\SortingCommand.cs" />
     <Compile Include="Controllers\TypeExtensions.cs" />
     <Compile Include="Models\StandardPropertyPathNode.cs" />
@@ -188,7 +189,6 @@
     <Compile Include="Models\SelectionModel.cs" />
     <Compile Include="Models\SortDirectionEventArgs.cs" />
     <Compile Include="Models\SortingModel.cs" />
-    <Compile Include="Controllers\StringToColumnWidthConverter.cs" />
     <Compile Include="Models\SizeMode.cs" />
     <Compile Include="Notifications.cs" />
     <Compile Include="NotificationTypes.cs" />
