Added the equivalent of x:Static for the data grid to use.
Signed-off-by: ddobrev <dpldobrev@gmail.com>

--- a/XamlGrid/XamlGrid.csproj
+++ b/XamlGrid/XamlGrid.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Views\OSColors.cs" />
     <Compile Include="Views\Row.cs" />
     <Compile Include="Views\RowBase.cs" />
+    <Compile Include="Views\StaticExtension.cs" />
     <Compile Include="VisualTreeVisualizer.cs" />
   </ItemGroup>
   <ItemGroup>
